src/test/resources/nox/errors/err_main_struct_type_mismatch.nox
// @test:arg point {"x": 10, "y": "notanumber"}
// @test:error TypeError

type Point { int x; int y; }

main(Point point) {
    return point.x.toString();
}
